--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.room:room-runtime:2.2.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 }
